fixing text color bug with dark mode for likes modal

--- a/web/src/components/modals/LikesModal/LikesModal.module.css
+++ b/web/src/components/modals/LikesModal/LikesModal.module.css
@@ -55,8 +55,8 @@
 .modal__link {
   outline-color: #404164;
   margin-right: 1rem;
-  color: inherit;
   text-decoration: inherit;
+  color: var(--text-color);
 }
 
 .modal__link:hover {
